--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   background-color: #F7F7F7;
   line-height: 22px;
   font-size: 16px;
-font-family: 'Roboto Mono';
+  font-family: 'Roboto Mono';
   padding-top: 100px;
 }
 
@@ -12,5 +12,22 @@ font-family: 'Roboto Mono';
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-	text-align: center;
+	text-align: left;
+}
+
+.content {
+  text-align: left;
+  margin-bottom: 80px;
+}
+
+h4 {
+  color: #888888;
+}
+
+p.factoid {
+  color: black;
+}
+
+h4.answers {
+  color: green;
 }
