--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,10 @@ body {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-	text-align: left;
+  text-align: left;
 }
 
-.content {
+.question {
   text-align: left;
   border: 5px solid #ddd;
   margin-bottom: 50px;
@@ -34,3 +34,10 @@ h4.answers {
   color: green;
 }
 
+.question .answer {
+  display: none;
+}
+
+.choices {
+  list-style-type: upper-alpha;
+}
